# tooska

./: CMakeLists.txt
src/: CMakeLists.txt
src/core/: token_parser.cpp  token_parser.h  tokenizer_base.cpp  tokenizer_base.h  tree.h
src/html/: html_document.cpp
src/soap/: class_generator.cpp
test/: CMakeLists.txt  main.cpp
tools/html_formatter/: CMakeLists.txt
tools/wsdl_parser/: CMakeLists.txt
